--- a/ListaDeNotas/src/components/ListaDeNotas/style.css
+++ b/ListaDeNotas/src/components/ListaDeNotas/style.css
@@ -1,8 +1,20 @@
-.lista-notas{
+.lista-notas {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    border-radius: 3px;
+    background: white;
     padding: 2em;
     list-style-type: none;
-}
+    overflow: scroll;
+    overflow-x: hidden;
+  }
 
-.lista-notas_item{
+  ul.lista-notas{
+    margin: 0;
+  }
+  
+  .lista-notas_item {
     margin-bottom: 1.2em;
-}
+    height: fit-content;
+    margin: 1em;
+  }
