--- a/ListaDeNotas/src/assets/index.css
+++ b/ListaDeNotas/src/assets/index.css
@@ -12,3 +12,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.main-content{
+  background: white;
+  border-radius: 3px;
+}
