--- a/ListaDeNotas/src/components/ListaDeNotas/style.css
+++ b/ListaDeNotas/src/components/ListaDeNotas/style.css
@@ -1,17 +1,20 @@
 .lista-notas {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: auto;
     border-radius: 3px;
     background: white;
     padding: 2em;
+    padding-top: 0;
     list-style-type: none;
     overflow: scroll;
     overflow-x: hidden;
+    min-width: 100%;
   }
 
   ul.lista-notas{
     margin: 0;
   }
+  
   
   .lista-notas_item {
     margin-bottom: 1.2em;
