--- a/ListaDeNotas/src/components/ListaDeCategorias/style.css
+++ b/ListaDeNotas/src/components/ListaDeCategorias/style.css
@@ -40,3 +40,12 @@
       flex-direction: column;
       align-items: center;
   }
+
+  .categoria_header{
+    background: #5b3898;
+    width: fit-content;
+    border-radius: 5px;
+    color: white;
+    padding: 0.3rem;
+    margin-bottom: 1em;
+}
